--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
   "author": "Junior <jose.farias@itst.com.br>",
   "license": "MIT",
   "dependencies": {
+    "antd": "^2.7.1",
+    "axios": "^0.15.3",
+    "jquery": "^3.1.1",
+    "material-design-icons": "^3.0.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "react-scripts": "^0.9.0"
