--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.15.3",
     "jquery": "^3.1.1",
     "material-design-icons": "^3.0.1",
+    "pubsub-js": "^1.5.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-mdl": "^1.9.0",
