--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pubsub-js": "^1.5.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-facebook-login": "^3.5.0",
     "react-mdl": "^1.9.0",
     "react-router": "^3.0.2"
   },
