--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^15.4.2",
     "react-facebook-login": "^3.5.0",
     "react-mdl": "^1.9.0",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "webpack": "^1.12.13"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
@@ -31,7 +32,6 @@
     "http-server": "^0.8.5",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
-    "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
