--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "react-facebook-login": "^3.5.0",
     "react-mdl": "^1.9.0",
     "react-router": "^3.0.2",
-    "webpack": "^1.12.13"
-  },
-  "devDependencies": {
+    "webpack": "^1.12.13",
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
