--- a/package.json
+++ b/package.json
@@ -9,33 +9,34 @@
   "dependencies": {
     "antd": "^2.7.1",
     "axios": "^0.15.3",
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "compression": "^1.6.1",
+    "css-loader": "^0.26.2",
     "express": "^4.13.4",
+    "file-loader": "^0.10.1",
+    "http-server": "^0.8.5",
     "if-env": "^1.0.0",
     "jquery": "^3.1.1",
     "material-design-icons": "^3.0.1",
+    "node-localstorage": "^1.3.0",
     "pubsub-js": "^1.5.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-facebook-login": "^3.5.0",
     "react-mdl": "^1.9.0",
     "react-router": "^3.0.2",
-    "webpack": "^1.12.13",
-    "babel-core": "^6.5.1",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.26.2",
-    "file-loader": "^0.10.1",
-    "http-server": "^0.8.5",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
+    "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:dev": "webpack-dev-server --inline --content-base public/ --history-api-fallback",
-    "start:prod": "npm run build && node server.bundle.js",
+    "start:prod": "npm run build && node bundle.js",
     "build:client": "webpack",
     "build:server": "webpack --config webpack.server.config.js",
     "build": "npm run build:client && npm run build:server"
