--- a/package.json
+++ b/package.json
@@ -2,43 +2,94 @@
   "name": "nuflow-react",
   "version": "1.0.0",
   "main": "index.js",
-  "private": true,
   "repository": "https://github.com/Alberto19/nuflow-react.git",
-  "author": "Junior <jose.farias@itst.com.br>",
+  "author": "Alberto19 <junioralberto19@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "antd": "^2.7.1",
     "axios": "^0.15.3",
-    "babel-core": "^6.5.1",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "compression": "^1.6.1",
-    "css-loader": "^0.26.2",
-    "express": "^4.13.4",
-    "file-loader": "^0.10.1",
-    "http-server": "^0.8.5",
-    "if-env": "^1.0.0",
-    "jquery": "^3.1.1",
+    "global": "^4.3.1",
     "material-design-icons": "^3.0.1",
-    "node-localstorage": "^1.3.0",
     "pubsub-js": "^1.5.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-facebook-login": "^3.5.0",
     "react-mdl": "^1.9.0",
-    "react-router": "^3.0.2",
-    "style-loader": "^0.13.2",
+    "react-router": "^3.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "^15.0.11",
+    "@types/react-addons-test-utils": "^0.14.17",
+    "@types/react-dom": "^0.14.23",
+    "@types/react-router": "^3.0.3",
+    "autoprefixer": "^6.7.3",
+    "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-istanbul": "^4.0.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "body-parser": "^1.17.1",
+    "browser-sync": "^2.18.8",
+    "browser-sync-spa": "^1.0.3",
+    "compression": "^1.6.1",
+    "css-loader": "^0.26.1",
+    "del": "^2.2.2",
+    "es6-shim": "^0.35.3",
+    "eslint": "^3.15.0",
+    "eslint-config-xo-react": "^0.10.0",
+    "eslint-config-xo-space": "^0.15.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-react": "^6.10.0",
+    "express": "^4.13.4",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.1",
+    "gulp": "gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
+    "gulp-cli": "^1.2.2",
+    "gulp-filter": "^5.0.0",
+    "gulp-hub": "frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
+    "gulp-util": "^3.0.8",
+    "html-webpack-plugin": "^2.28.0",
+    "jasmine": "^2.5.3",
+    "json-loader": "^0.5.4",
+    "karma": "^1.4.1",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-shim": "^1.4.0",
+    "karma-webpack": "^2.0.2",
+    "morgan": "^1.8.1",
+    "phantomjs-prebuilt": "^2.1.14",
+    "postcss-loader": "^1.3.1",
+    "react-addons-test-utils": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.13.1",
     "url-loader": "^0.5.8",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-fail-plugin": "^1.0.5",
+    "webpack-hot-middleware": "^2.17.0"
   },
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:dev": "webpack-dev-server --inline --content-base public/ --history-api-fallback",
-    "start:prod": "npm run build && node bundle.js",
-    "build:client": "webpack",
-    "build:server": "webpack --config webpack.server.config.js",
-    "build": "npm run build:client && npm run build:server"
+    "start": "npm run build && node server.js",
+    "build": "gulp",
+    "serve": "gulp serve",
+    "serve:dist": "gulp serve:dist",
+    "test": "gulp test",
+    "test:auto": "gulp test:auto"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "browser": true,
+      "jasmine": true
+    },
+    "extends": [
+      "xo-react/space",
+      "xo-space/esnext"
+    ],
+    "parser": "babel-eslint"
   }
 }
